[package]
name = "capped_multiset"
version = "0.1.0"
authors = ["Darshit Shah <s8dashah@stud.uni-saarland.de>"]
description = "A Multiset that can return a capped value on the elements"
keywords = ["multiset", "sets"]
documentation = "https://docs.rs/capped_multiset"
readme = "README.md"
license = "MIT"

[dependencies]
